--- a/assets/style.css
+++ b/assets/style.css
@@ -11,3 +11,27 @@ Utilities
 /*
 /Utilities
 */
+
+
+/* 
+Header 
+*/
+
+header{
+  width: 100%;
+  height: 80px;
+  background-color:#3161e0 ;
+}
+
+header .header-section{
+
+  background-color: white;
+
+}
+
+
+
+
+/* 
+/Header 
+*/
