--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,31 @@ Utilities
   box-sizing: border-box;
 }
 
+.floatter-utily{
+  float: left;
+}
+
+.clearfix::after{
+content: "";
+display: table;
+clear: both;
+}
+
+/* .position-absolute-utily{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+} */
+
+.margin-footer-utily{
+  margin: 1px 1px 1px 1px;
+}
+
+.container-size{
+  width: 80%;
+  margin: 0 auto;
+}
 
 /*
 /Utilities
@@ -18,20 +43,145 @@ Header
 */
 
 header{
-  width: 100%;
   height: 80px;
   background-color:#3161e0 ;
 }
 
-header .header-section{
-
+header .header-container{
+  height: 80px;
   background-color: white;
-
 }
-
-
 
 
 /* 
 /Header 
+*/
+
+/* ----------------------------------------------------------------------- */
+
+/*
+Jumbotron
+*/
+
+.jumbotron{
+  width: 100%;
+  height: 600px;
+  background-color: rosybrown;
+}
+
+/*
+/Jumbotron
+*/
+
+
+/* ----------------------------------------------------------------------- */
+
+
+/*
+Main
+*/
+
+.second-section{ 
+  background-color: grey;
+}
+.forth-section{
+  background-color: grey;
+}
+
+
+
+.first-section-container{
+  height: 300px;
+  background-color: red;
+}
+
+.second-section-container{ 
+  height: 300px;
+  background-color: rgb(251, 255, 0);
+}
+
+.third-section-container{
+  height: 300px;
+  background-color: rgb(76, 0, 255);
+}
+
+.forth-section-container{
+  height: 600px;
+  background-color: rgb(0, 255, 255);
+}
+
+.section-image-container{
+  width: 300px;
+  height: 200px;
+  background-color: rgb(0, 5, 5);
+  margin: 0 15%;
+  
+}
+
+.section-texto-container{
+  width: 300px;
+  height: 200px;
+  background-color: rgb(155, 34, 34);
+  margin: 0 15%;
+}
+
+/*
+/Main
+*/
+
+
+/* ----------------------------------------------------------------------- */
+
+
+/*
+Footer
+*/
+
+footer{
+  height: 800px;
+  background-color:#3161e0 ;
+}
+
+.footer-container{
+  height: 500px;
+  background-color: blueviolet;
+  padding-top: 10px;
+  }
+
+  /* FOOTER MENU */ 
+
+.social-container{
+  width: 100px;
+  height: 200px;
+  background-color: chocolate;
+}
+.prodotto-container{
+  width: 100px;
+  height: 200px;
+  background-color: chocolate;
+}
+.compagnia-container{
+  width: 100px;
+  height: 200px;
+  background-color: chocolate;
+}
+
+.risorse-container{
+  width: 100px;
+  height: 200px;
+  background-color: chocolate;
+}
+
+.norme-container{
+  width: 100px;
+  height: 200px;
+  background-color: chocolate;
+}
+
+.footer-base-container{
+  height: 60px;
+  background-color: chocolate;
+}
+/*
+/Footer
 */
