--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,15 @@ Utilities
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+ul{
+  list-style: none;
+  text-transform: capitalize;
+  color: white;
+}
+
 
 .floatter-utily{
   float: left;
@@ -15,6 +23,20 @@ Utilities
 content: "";
 display: table;
 clear: both;
+}
+
+.button-setup{
+  font-weight: 600;
+  padding: 10px 15px;
+  border-radius: 25px;
+  text-transform: capitalize;
+  background-color: white;
+  color: black;
+}
+
+.hoverable-contentet:hover{
+  cursor: pointer;
+  color: #3161e0;
 }
 
 /* .position-absolute-utily{
@@ -44,12 +66,33 @@ Header
 
 header{
   height: 80px;
-  background-color:#3161e0 ;
+  background-color:#255ee9 ;
 }
 
 header .header-container{
-  height: 80px;
-  background-color: white;
+  line-height: 80px;
+  }
+
+.header-container img{
+  vertical-align:middle ;
+  margin-right: 25%;
+}
+.header-container ul,li{
+  display: inline-block;
+}
+
+.header-container li{
+  font-weight:600;
+  margin-right: 30px;
+}
+
+.hoverable-contente li:hover{
+  cursor: pointer;
+  color: #3d31e0;
+}
+
+.header-button-container{
+  float:right;
 }
 
 
@@ -64,10 +107,25 @@ Jumbotron
 */
 
 .jumbotron{
+  position: relative;
   width: 100%;
-  height: 600px;
-  background-color: rosybrown;
+  height: 530px;
+  background-image: url(./img/jumbo.png);
+  background-size: cover;
+  background-position: center;
 }
+
+.jumbotron-container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  /* width: 400px; */
+  height: 400px;
+  background-color:white ;
+}
+
+
 
 /*
 /Jumbotron
